# descriptive-statistics

./: README.md  io.github.diegoivan.descriptive_statistics.json  meson.build
.flatpak/: vala-language-server.sh
.flatpak/flatpak-builder/checksums/: x86_64-io.github.diegoivan.descriptive_statistics.json
data/: io.github.diegoivan.descriptive_statistics.appdata.xml.in  io.github.diegoivan.descriptive_statistics.desktop.in  io.github.diegoivan.descriptive_statistics.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  descriptive-statistics.gresource.xml  enums.vala  main.vala  meson.build  window.ui  window.vala
src/Models/: Column.vala  DataCalculator.vala  Results.vala  Row.vala
src/Models/Operators/: AbstractOperator.vala  Kurtosis.vala  Maximum.vala  Mean.vala  Median.vala  Minimum.vala  Mode.vala  SampleVariance.vala  Skewness.vala  StandardDeviation.vala  StandardError.vala  Sum.vala
src/Services/: ColumnFactory.vala
src/Widgets/: DataRow.vala  ResultPage.vala  ResultsList.vala  VisualizationGrid.vala
src/gtk/: data-row.ui  result-page.ui
